fix doc/doxygen.config to exclude generated files

--- a/doc/doxygen.config
+++ b/doc/doxygen.config
@@ -61,14 +61,19 @@ WARN_LOGFILE           =
 #---------------------------------------------------------------------------
 # configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = . \
-                         sfepy \
+INPUT                  = .
 FILE_PATTERNS          = *.c \
                          *.h \
                          *.i \
                          *.py
 RECURSIVE              = YES
-EXCLUDE                = 
+EXCLUDE                = build \
+			 doc \
+			 meshes \
+			 output \
+			 output-tests \
+			 tmp \
+		         work
 EXCLUDE_SYMLINKS       = NO
 EXCLUDE_PATTERNS       = *_wrap*
 EXAMPLE_PATH           = 
