--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ results/*
 work/*
 auto/*
 dist/
+gallery/
 meshes/
 patches/
 issues/
@@ -26,8 +27,11 @@ issues/
 *.log
 *.png
 *.pdf
+*.h5
 
 # Generated files:
+*.c
+*.h
 sfepy/fem/extmods/fem.py
 sfepy/fem/extmods/geometry.py
 sfepy/fem/extmods/meshutils.py
