--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ prune examples/*/*/output
 prune doc/_build
 prune doc/html
 exclude doc/logo/*.vtk
+exclude doc/publish.py
 
 include sfepy/fem/extmods/lobatto_template.pyx
 include sfepy/fem/extmods/version.h.in
