rename & update script/gen_lobatto_pyx.py -> script/gen_lobatto1d_c.py
- generate lobatto1d.c and lobatto1h.c
- new lobatto1d_template.c, lobatto1d_template.h

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,5 +6,6 @@ prune doc/html
 exclude doc/logo/*.vtk
 exclude doc/publish.py
 
-include sfepy/fem/extmods/lobatto_template.pyx
+include sfepy/fem/extmods/lobatto1d_template.c
+include sfepy/fem/extmods/lobatto1d_template.h
 include sfepy/fem/extmods/version.h.in
