fix paths in MANIFEST.in

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,6 +8,6 @@ exclude doc/publish.py
 exclude sfepy/__config__.py
 exclude sfepy/discrete/__config__.py
 
-include sfepy.discrete.fem.extmods/lobatto1d_template.c
-include sfepy.discrete.fem.extmods/lobatto1d_template.h
-include sfepy.discrete.fem.extmods/version.h.in
+include sfepy/discrete/fem/extmods/lobatto1d_template.c
+include sfepy/discrete/fem/extmods/lobatto1d_template.h
+include sfepy/discrete/fem/extmods/version.h.in
